--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>Persistencia</module>
+        <module>Dominio</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
