--- a/Negocio/pom.xml
+++ b/Negocio/pom.xml
@@ -8,6 +8,13 @@
     </parent>
     <artifactId>Negocio</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Persistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>hp.negocio.Negocio</exec.mainClass>
