--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>Dominio</module>
         <module>Presentacion</module>
         <module>Negocio</module>
+        <module>Modulo_Usuarios</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
