--- a/Negocio/pom.xml
+++ b/Negocio/pom.xml
@@ -7,7 +7,6 @@
         <version>0</version>
     </parent>
     <artifactId>Negocio</artifactId>
-    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -26,11 +25,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Persistencia</artifactId>
-            <version>${project.version}</version>
+            <version>0</version>
         </dependency>
     </dependencies>
     <properties>
-        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.release>22</maven.compiler.release>
         <exec.mainClass>hp.negocio.Negocio</exec.mainClass>
     </properties>
 </project>
